# CubeClassLoader

./: CMakeLists.txt  DButton.cpp  DButton.h  README.md  main.cpp  main.h
cwmods/cube/: Creature.h  Item.cpp  SaveData.h  Spirit.h
imgui-1.73/: CMakeLists.txt  MakeCWModsCMake.py  imgui.cpp  imgui.h  imgui_widgets.cpp
src/: class.cpp  class.h  classWindow.cpp  classWindow.h  fileParser.h  public.h  skillTree.h
src/GUI/: ClassEditorWindow.cpp  MenuWindow.cpp  SkillTreeWindow.cpp  Window.h  WindowRenderer.cpp  WindowRenderer.h
src/hooks/: abilities_hook.h  crafting_hook.h  item_restrictions_hook.h  menu_hook.h  on_creature_update_hook.h  treasure_fix.h
src/skilltree/: ShiftSkills.cpp  ShiftSkills.h  SkillTree.cpp  SkillTree.h  Stats.cpp  Stats.h  UltimateSkills.cpp  UltimateSkills.h
