cmake_minimum_required (VERSION 3.8)
project(project_ClassLoader)
add_subdirectory(cwmods)
add_subdirectory(imgui-1.73)
add_library (ClassLoader SHARED "main.cpp"  "src/class.cpp" "DButton.cpp" "src/classWindow.cpp"  "src/GUI/MenuWindow.cpp" "src/GUI/ClassEditorWindow.cpp" "src/GUI/SkillTreeWindow.cpp")
target_link_libraries (ClassLoader LINK_PUBLIC CWSDK)
target_link_libraries (ClassLoader LINK_PUBLIC IMGUI)